--- a/index.html
+++ b/index.html
@@ -446,11 +446,12 @@
 
         .ai-modal-header {
             flex-shrink: 0;
-            padding: 20px 0 10px 0;
-            /* Sides to 0 */
+            padding: 25px 20px 10px 20px;
+            /* Balanced 20px side padding */
             text-align: center;
             background: transparent;
             z-index: 10;
+            box-sizing: border-box;
         }
 
         /* New: Horizontal Tags */
@@ -475,12 +476,17 @@
         .ai-modal-body {
             flex-grow: 1;
             overflow-y: auto;
-            padding: 0 0 80px 0;
-            /* Sides to 0 for absolute centering of children */
+            scrollbar-gutter: stable;
+            /* Prevent lateral shift when scrollbar appears */
+            padding: 0 20px 80px 20px;
+            /* Balanced 20px side padding */
             width: 100%;
             display: flex;
             flex-direction: column;
             align-items: center;
+            justify-content: flex-start;
+            /* Combined properties */
+            box-sizing: border-box;
             -webkit-overflow-scrolling: touch;
         }
 
@@ -511,22 +517,16 @@
             font-size: 13px;
             border-radius: 25px;
             /* Fully rounded */
-            margin: 0 auto 20px auto !important;
-            /* Forced Centering */
+            margin: 0 0 20px 0 !important;
+            /* Bottom margin only, sides handle by parent padding */
             box-shadow: 0 2px 8px rgba(0, 0, 0, 0.15);
-            width: 90% !important;
-            /* Fixed percentage for reliable centering */
+            width: 100% !important;
+            /* Fill parent padded area */
             animation: pulse-soft 2s infinite;
             display: block;
         }
 
-        .ai-modal-body {
-            width: 100%;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: flex-start;
-        }
+
 
         @keyframes pulse-soft {
             0% {
@@ -1523,10 +1523,10 @@
             display: flex;
             flex-direction: column;
             gap: 12px;
-            width: 90% !important;
-            /* Match all modal components */
-            margin: 10px auto 0 auto !important;
-            /* Centered */
+            width: 100% !important;
+            /* Use full padded width */
+            margin: 10px 0 0 0 !important;
+            /* Reset side margins */
         }
 
         /* AI System Card Style */
@@ -1711,9 +1711,9 @@
         /* Input Container for Dream/Zodiac */
         .input-container {
             display: none;
-            width: 90% !important;
-            /* Match all modal components */
-            margin: 0 auto !important;
+            width: 100% !important;
+            /* Use full padded width */
+            margin: 0 !important;
             flex-direction: column;
             align-items: center;
             text-align: center;
@@ -2691,7 +2691,7 @@
                 <!-- Fixed Header -->
                 <div class="ai-modal-header">
                     <span class="ai-close-btn-fixed" onclick="closeModal()">✕</span>
-                    <div class="ai-header-content" style="text-align: center; width: 90%; margin: 0 auto;">
+                    <div class="ai-header-content" style="text-align: center; width: 100%; margin: 0;">
                         <div class="ai-title" style="font-size:22px; margin-bottom:5px; text-align: center;">✨ AI 로또 분석
                             시스템</div>
                         <div class="ai-tags">
