UI: AI 모달 상단 여백 확대 (120px)로 컨텐츠 5cm 하향 조정

--- a/index.html
+++ b/index.html
@@ -448,7 +448,7 @@
 
         .ai-modal-header {
             flex-shrink: 0;
-            padding: 25px 20px 10px 20px;
+            padding: 120px 20px 10px 20px;
             /* Balanced 20px side padding */
             text-align: center;
             background: transparent;
@@ -564,7 +564,7 @@
                 max-width: 94%;
                 margin: 0 auto;
                 /* Center it */
-                padding: 25px 0;
+                padding: 120px 0 25px 0;
                 /* Symmetric sides (0 padding, children handle margins) */
                 /* iPhone 15 Fix (v4): Bottom Sheet Style */
                 max-height: 75dvh;
