UI: AI 모달 상단 여백 190px(5cm) 적용 및 인라인 스타일 제거

--- a/index.html
+++ b/index.html
@@ -448,7 +448,7 @@
 
         .ai-modal-header {
             flex-shrink: 0;
-            padding: 120px 20px 10px 20px;
+            padding: 190px 20px 10px 20px;
             /* Balanced 20px side padding */
             text-align: center;
             background: transparent;
@@ -564,7 +564,7 @@
                 max-width: 94%;
                 margin: 0 auto;
                 /* Center it */
-                padding: 120px 0 25px 0;
+                padding: 190px 0 25px 0;
                 /* Symmetric sides (0 padding, children handle margins) */
                 /* iPhone 15 Fix (v4): Bottom Sheet Style */
                 max-height: 75dvh;
@@ -2751,7 +2751,7 @@
             <!-- AI Modal Content (Fixed Header + Scrollable Body) -->
             <div id="adContent" class="ai-modal-content" onclick="event.stopPropagation()">
                 <!-- Fixed Header -->
-                <div class="ai-modal-header" style="padding-top: 0px;">
+                <div class="ai-modal-header">
                     <span class="ai-close-btn-fixed" onclick="closeModal()">✕</span>
                     <div class="ai-header-content" style="text-align: center; width: 100%; margin: 0 auto;">
                         <div class="ai-title"
