UI: 띠별 명칭에서 '띠' 제거 및 가로형 레이아웃 텍스트 최적화

--- a/index.html
+++ b/index.html
@@ -2869,29 +2869,29 @@
                         </h2>
                         <div class="zodiac-grid">
                             <div class="zodiac-item" onclick="handleZodiacClick('쥐', '🐹')"><span
-                                    class="zodiac-icon">🐹</span><span class="zodiac-name">쥐띠</span></div>
+                                    class="zodiac-icon">🐹</span><span class="zodiac-name">쥐</span></div>
                             <div class="zodiac-item" onclick="handleZodiacClick('소', '🐮')"><span
-                                    class="zodiac-icon">🐮</span><span class="zodiac-name">소띠</span></div>
+                                    class="zodiac-icon">🐮</span><span class="zodiac-name">소</span></div>
                             <div class="zodiac-item" onclick="handleZodiacClick('호랑이', '🐯')"><span
-                                    class="zodiac-icon">🐯</span><span class="zodiac-name">범띠</span></div>
+                                    class="zodiac-icon">🐯</span><span class="zodiac-name">호랑이</span></div>
                             <div class="zodiac-item" onclick="handleZodiacClick('토끼', '🐰')"><span
-                                    class="zodiac-icon">🐰</span><span class="zodiac-name">토끼띠</span></div>
+                                    class="zodiac-icon">🐰</span><span class="zodiac-name">토끼</span></div>
                             <div class="zodiac-item" onclick="handleZodiacClick('용', '🐲')"><span
-                                    class="zodiac-icon">🐲</span><span class="zodiac-name">용띠</span></div>
+                                    class="zodiac-icon">🐲</span><span class="zodiac-name">용</span></div>
                             <div class="zodiac-item" onclick="handleZodiacClick('뱀', '🐍')"><span
-                                    class="zodiac-icon">🐍</span><span class="zodiac-name">뱀띠</span></div>
+                                    class="zodiac-icon">🐍</span><span class="zodiac-name">뱀</span></div>
                             <div class="zodiac-item" onclick="handleZodiacClick('말', '🐴')"><span
-                                    class="zodiac-icon">🐴</span><span class="zodiac-name">말띠</span></div>
+                                    class="zodiac-icon">🐴</span><span class="zodiac-name">말</span></div>
                             <div class="zodiac-item" onclick="handleZodiacClick('양', '🐑')"><span
-                                    class="zodiac-icon">🐑</span><span class="zodiac-name">양띠</span></div>
+                                    class="zodiac-icon">🐑</span><span class="zodiac-name">양</span></div>
                             <div class="zodiac-item" onclick="handleZodiacClick('원숭이', '🐵')"><span
-                                    class="zodiac-icon">🐵</span><span class="zodiac-name">원숭이띠</span></div>
+                                    class="zodiac-icon">🐵</span><span class="zodiac-name">원숭이</span></div>
                             <div class="zodiac-item" onclick="handleZodiacClick('닭', '🐔')"><span
-                                    class="zodiac-icon">🐔</span><span class="zodiac-name">닭띠</span></div>
+                                    class="zodiac-icon">🐔</span><span class="zodiac-name">닭</span></div>
                             <div class="zodiac-item" onclick="handleZodiacClick('개', '🐶')"><span
-                                    class="zodiac-icon">🐶</span><span class="zodiac-name">개띠</span></div>
+                                    class="zodiac-icon">🐶</span><span class="zodiac-name">개</span></div>
                             <div class="zodiac-item" onclick="handleZodiacClick('돼지', '🐷')"><span
-                                    class="zodiac-icon">🐷</span><span class="zodiac-name">돼지띠</span></div>
+                                    class="zodiac-icon">🐷</span><span class="zodiac-name">돼지</span></div>
                         </div>
                         <div style="margin-top:3px;">
                             <button class="btn-sm"
